--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-action-button": "^2.8.5",
-    "react-native-gesture-handler": "^1.4.1",
+    "react-native-gesture-handler": "~1.3.0",
+    "react-native-modal-datetime-picker": "^7.5.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-web": "^0.11.4",
     "react-navigation": "^4.0.0",
